syntax = "proto3";
 
option csharp_namespace = "GrpcDemoServer";
 
package Hello;
 
service Hello {
  //通过一元方式传输
  rpc SayHello (HelloRequest) returns (HelloReply);
  //通过客户端流的方式传输
  rpc SayHelloClientStream (stream HelloRequest) returns (HelloReply);
  //通过服务端流的方式传输
  rpc SayHelloServerStream (HelloRequest) returns (stream HelloReply);
  //通过双向流的方式传输
  rpc SayHelloStream (stream HelloRequest) returns (stream HelloReply);
}
 
message HelloRequest {
  string name = 1;
}
 
message HelloReply {
  string message = 1;
}